--- a/LifeIsStrange/index.html
+++ b/LifeIsStrange/index.html
@@ -9,12 +9,14 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
+    <!-- jQuery CDN-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     
     <!-- Local Style Sheet -->
     <link href="content/site.css" rel="stylesheet" />
-
 </head>
 <body>
     <!-- HEADER -->
@@ -22,7 +24,7 @@
         <h1 class="container"><img id="logoImg" src="images/rsz_transparentlogo.png" /></h1>
     </div>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-default navbar-static-top">
+    <nav class="navbar navbar-static-top" id="navvy">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -35,28 +37,52 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li class="dropdown-header">Nav header</li>
-                            <li><a href="#">Separated link</a></li>
-                            <li><a href="#">One more separated link</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="../navbar/">Default</a></li>
-                    <li class="active"><a href="./">Static top <span class="sr-only">(current)</span></a></li>
-                    <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+                    <li><a href="#about">About the Game</a></li>
+                    <li><a href="#videos">Video Clips</a></li>
+                    <li><a href="#cheats">Game Cheats</a></li>
+                    <li><a href="#http://www.lifeisstrange.com/talk" target="_blank">Talk About It</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
     </nav>
+    <!-- JUMBOTRON FOR VIDEO -->
+    <div class="jumbotron mainSec">
+        <div class="container">
+            <h1 class="container" id="trailer"><iframe width="560" height="315" src="https://www.youtube.com/embed/AURVxvIZrmU" frameborder="1" allowfullscreen></iframe></h1>
+        </div>
+    </div>
+    <!-- THUMBNAILS -->
+    <div class="row container previewSec">
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="images/max7.png" alt="">
+                <div class="caption">
+                    <h3>Episode 1</h3>
+                    <p>Praesent sed tortor eu tortor ultricies gravida ac nec orci. Donec volutpat vehicula purus sed consequat. Maecenas tristique nibh quis commodo hendrerit. Donec et augue non nibh auctor ullamcorper. Aliquam scelerisque, est gravida molestie consequat, elit nisl aliquam libero, a iaculis lectus quam non ex. </p>
+                    <p><a href="#" class="btn btn-primary" role="button">Play Now</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="images/maxresdefault.jpg" alt="">
+                <div class="caption">
+                    <h3>Episode 2</h3>
+                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce fringilla vehicula orci, quis molestie ipsum luctus sit amet. Phasellus at dolor est. Sed nec tempor arcu, non varius arcu. Quisque posuere porttitor elementum. Vestibulum scelerisque pulvinar lacinia. Cras congue massa vitae convallis rhoncus.  </p>
+                    <p><a href="#" class="btn btn-primary" role="button">Play Now</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="images/maxresdefault3.jpg" alt="">
+                <div class="caption">
+                    <h3>Episode 3</h3>
+                    <p>Etiam mollis nunc a facilisis condimentum. Integer sollicitudin metus metus, sed commodo lorem tincidunt sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam mollis enim sapien, ut convallis risus blandit ut. </p>
+                    <p><a href="#" class="btn btn-primary" role="button">Play Now</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
